--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
       name="description"
       content="React JS Website for affiliate marketing of dog products"
     />
-    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11422830375"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-11422830375');
+    </script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/loki-head_v2.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
